testdata/golden/sema/valid/concurrency/spawn_sendable.sg
// Testing that sendable types can be used in async functions with task

pub type Counter = {
    value: int,
};

// Async functions that process sendable types
async fn process_counter(c: Counter) -> int {
    return c.value + 1;
}

async fn double_int(x: int) -> int {
    return x * 2;
}

async fn negate_bool(b: bool) -> bool {
    return !b;
}

// task with owned data passed to async function
pub fn spawn_with_owned_data(c: Counter) -> Task<int> {
    return task process_counter(c);
}

// task with primitive int
pub fn spawn_with_int(x: int) -> Task<int> {
    return task double_int(x);
}

// task with primitive bool
pub fn spawn_with_bool(b: bool) -> Task<bool> {
    return task negate_bool(b);
}
